feat(url rediraction): Verifies the password for a protectedshort URL and returns the original URL
