# internal/dto/request/redirect_request.go
@@ -1,0 +1,6 @@
+package request
+
+// UnlockURLRequest adalah DTO untuk request membuka URL yang terproteksi.
+type UnlockURLRequest struct {
+	Password string `json:"password" binding:"required"`
+}
